--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -210,7 +210,7 @@
                               >
                                 <label
                                   for="SURVEILLANCE-row-checkbox"
-                                  class="_13xlah4"
+                                  class="cursor-pointer"
                                 >
                                   <div class="d-flex">
                                     <div class="_gfomxi">
@@ -272,7 +272,7 @@
                               >
                                 <label
                                   for="WEAPONS-row-checkbox"
-                                  class="_13xlah4"
+                                  class="cursor-pointer"
                                 >
                                   <div class="d-flex">
                                     <div class="_gfomxi">
@@ -313,7 +313,7 @@
                               >
                                 <label
                                   for="ANIMALS-row-checkbox"
-                                  class="_13xlah4"
+                                  class="cursor-pointer"
                                 >
                                   <div class="d-flex">
                                     <div class="_gfomxi">
