--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -182,7 +182,7 @@
                         >
                           <label
                             for="reason-GUEST_OFFER_DAMAGE-row-radio-button"
-                            class="_13xlah4"
+                            class="cursor-pointer"
                             ><div class="d-flex">
                               <div class="_7ytxmo">
                                 <input
@@ -212,7 +212,7 @@
                         >
                           <label
                             for="reason-GUEST_OFFER_EXTRA-row-radio-button"
-                            class="_13xlah4"
+                            class="cursor-pointer"
                             ><div class="d-flex">
                               <div class="_7ytxmo">
                                 <input
@@ -251,7 +251,7 @@
                         >
                           <label
                             for="reason-GUEST_OFFER_OTHER-row-radio-button"
-                            class="_13xlah4"
+                            class="cursor-pointer"
                             ><div class="d-flex">
                               <div class="_7ytxmo">
                                 <input
