--- a/reviews.html
+++ b/reviews.html
@@ -372,7 +372,7 @@
                                     >
                                       <label
                                         for="expectations_option_very_high-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_gfomxi">
                                             <div class="d-flex">
@@ -409,7 +409,7 @@
                                     >
                                       <label
                                         for="expectations_option_very_high-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_7ytxmo">
                                             <input
@@ -451,7 +451,7 @@
                                     >
                                       <label
                                         for="expectations_option_high-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_gfomxi">
                                             <div class="d-flex">
@@ -488,7 +488,7 @@
                                     >
                                       <label
                                         for="expectations_option_high-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_7ytxmo">
                                             <input
@@ -530,7 +530,7 @@
                                     >
                                       <label
                                         for="expectations_option_neutral-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_gfomxi">
                                             <div class="d-flex">
@@ -567,7 +567,7 @@
                                     >
                                       <label
                                         for="expectations_option_neutral-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_7ytxmo">
                                             <input
@@ -609,7 +609,7 @@
                                     >
                                       <label
                                         for="expectations_option_low-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_gfomxi">
                                             <div class="d-flex">
@@ -646,7 +646,7 @@
                                     >
                                       <label
                                         for="expectations_option_low-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_7ytxmo">
                                             <input
@@ -688,7 +688,7 @@
                                     >
                                       <label
                                         for="expectations_option_very_low-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_gfomxi">
                                             <div class="d-flex">
@@ -725,7 +725,7 @@
                                     >
                                       <label
                                         for="expectations_option_very_low-row-radio-button"
-                                        class="_13xlah4"
+                                        class="cursor-pointer"
                                         ><div class="d-flex">
                                           <div class="_7ytxmo">
                                             <input
