--- a/submission/review.html
+++ b/submission/review.html
@@ -1293,7 +1293,7 @@
                             >
                               <label
                                 for="info_is_compliant_with_all_laws-row-checkbox"
-                                class="_13xlah4"
+                                class="cursor-pointer"
                                 ><div class="d-flex">
                                   <div class="_gfomxi">
                                     <div
@@ -1340,7 +1340,7 @@
                             >
                               <label
                                 for="info_is_compliant_with_airbnb_policies-row-checkbox"
-                                class="_13xlah4"
+                                class="cursor-pointer"
                                 ><div class="d-flex">
                                   <div class="_gfomxi">
                                     <div
