--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1295,7 +1295,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
-                                      class="_13xlah4"
+                                      class="cursor-pointer"
                                       ><div class="d-flex">
                                         <div class="_gfomxi">
                                           <div
@@ -1333,7 +1333,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-radio-button"
-                                      class="_13xlah4"
+                                      class="cursor-pointer"
                                       ><div class="d-flex">
                                         <div class="_gfomxi">
                                           <div
