--- a/account-notifications.html
+++ b/account-notifications.html
@@ -663,7 +663,7 @@
                                           >
                                             <label
                                               for="undefinedEMAIL-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
@@ -1460,7 +1460,7 @@
                                               >
                                                 <label
                                                   for="undefinedEMAIL-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                   ><div class="d-flex">
                                                     <div class="_7ytxmo">
                                                       <span class="_10ndlvp"
