--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -530,7 +530,7 @@
                             >
                               <label
                                 for="new-listing-promotion-row-checkbox"
-                                class="_13xlah4"
+                                class="cursor-pointer"
                               >
                                 <div class="d-flex">
                                   <div class="_gfomxi">
