--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -517,7 +517,7 @@
                                           >
                                             <label
                                               for="underTwo-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
@@ -589,7 +589,7 @@
                                           >
                                             <label
                                               for="Tag:4804-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
@@ -636,7 +636,7 @@
                                           >
                                             <label
                                               for="Tag:4802-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
@@ -684,7 +684,7 @@
                                           >
                                             <label
                                               for="Tag:4805-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
@@ -976,7 +976,7 @@ Guests should know how to fry food and also bring boiled eggs.</textarea
                                           >
                                             <label
                                               for="requireIdVerification-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
