--- a/edit/what.html
+++ b/edit/what.html
@@ -676,7 +676,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-0-radio-row-row-radio-button"
-                                                class="_13xlah4"
+                                                class="cursor-pointer"
                                                 ><div class="d-flex">
                                                   <div class="_gfomxi">
                                                     <div
@@ -714,7 +714,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-1-radio-row-row-radio-button"
-                                                class="_13xlah4"
+                                                class="cursor-pointer"
                                                 ><div class="d-flex">
                                                   <div class="_gfomxi">
                                                     <div
