--- a/resolutions.html
+++ b/resolutions.html
@@ -158,7 +158,7 @@
                       >
                         <label
                           for="intent-send-money-row-radio-button"
-                          class="_13xlah4"
+                          class="cursor-pointer"
                           ><div class="d-flex">
                             <div class="_7ytxmo">
                               <input
@@ -189,7 +189,7 @@
                       >
                         <label
                           for="intent-request-money-row-radio-button"
-                          class="_13xlah4"
+                          class="cursor-pointer"
                           ><div class="d-flex">
                             <div class="_7ytxmo">
                               <input
