rename form__select, form__badge, btn-outline-small, cursor-pointer

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -663,7 +663,7 @@
                                           >
                                             <label
                                               for="undefinedEMAIL-row-checkbox"
-                                              class="_13xlah4"
+                                              class="cursor-pointer"
                                               ><div class="d-flex">
                                                 <div class="_gfomxi">
                                                   <div
@@ -1460,7 +1460,7 @@
                                               >
                                                 <label
                                                   for="undefinedEMAIL-row-checkbox"
-                                                  class="_13xlah4"
+                                                  class="cursor-pointer"
                                                   ><div class="d-flex">
                                                     <div class="_7ytxmo">
                                                       <span class="_10ndlvp"
@@ -1706,7 +1706,7 @@
                                             </div>
                                             <div class="box-border">
                                               <select
-                                                class="_1iwku6d"
+                                                class="form__select"
                                                 id="notification-settings-active-phone-chooser"
                                               >
                                                 <option
