--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -400,7 +400,7 @@
                                     </div>
                                     <div>
                                       <div>
-                                        <button type="button" class="_1ju7xj0j">
+                                        <button type="button" class="btn-outline-small">
                                           <span class="_14d5b3i"
                                             ><span class="_1r769ej"
                                               ><svg
