--- a/calendar.html
+++ b/calendar.html
@@ -190,7 +190,7 @@
                               aria-label="Today, 1 July 2022, Friday"
                               disabled=""
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline-small"
                             >
                               Today
                             </button>
@@ -622,7 +622,7 @@
                               <div>
                                 <div>
                                   <div>
-                                    <button type="button" class="_1ju7xj0j">
+                                    <button type="button" class="btn-outline-small">
                                       <span class="_14d5b3i"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
