--- a/edit/what.html
+++ b/edit/what.html
@@ -431,7 +431,7 @@
                                               >
 Get ready to make eating eggs more eggsciting !
 
-I will teach you to make bright orange battered deep fried eggs  that are a staple street food in the Philippines. 
+I will teach you to make bright orange battered deep fried eggs  that are a staple street food in the Philippines.
 
 These can be made with any kind of boiled egg. In fact, we have two versions here with the smaller version made with quali eggs, called kwek-kwek, and a larger version made with chicken eggs called tokneneng.
 
@@ -498,7 +498,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                     data-testid="DURATION"
                                                     name="DURATION"
                                                     aria-describedby="DURATION-InputField-help"
-                                                    class="_1iwku6d"
+                                                    class="form__select"
                                                     id="DURATION"
                                                   >
                                                     <option value="0.5">
@@ -676,7 +676,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-0-radio-row-row-radio-button"
-                                                class="_13xlah4"
+                                                class="cursor-pointer"
                                                 ><div class="d-flex">
                                                   <div class="_gfomxi">
                                                     <div
@@ -714,7 +714,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                             >
                                               <label
                                                 for="ONLINE_QUESTION-1-radio-row-row-radio-button"
-                                                class="_13xlah4"
+                                                class="cursor-pointer"
                                                 ><div class="d-flex">
                                                   <div class="_gfomxi">
                                                     <div
