--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1040,7 +1040,7 @@
                       </div>
                       <div class="_g7lz6c">Group size</div>
                       <div class="_ls0e43">
-                        <button type="button" class="_1ju7xj0j">Preview</button>
+                        <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1089,7 +1089,7 @@
                                       <div class="box-border">
                                         <select
                                           name="data-type-picker-Public groups"
-                                          class="_1iwku6d"
+                                          class="form__select"
                                           id="data-type-picker-Public groups"
                                         >
                                           <option value="1">1</option>
@@ -1152,7 +1152,7 @@
                                       <div class="box-border">
                                         <select
                                           name="data-type-picker-Private groups"
-                                          class="_1iwku6d"
+                                          class="form__select"
                                           id="data-type-picker-Private groups"
                                         >
                                           <option value="1">1</option>
@@ -1249,7 +1249,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
