--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1037,7 +1037,7 @@
                       </div>
                       <div class="_g7lz6c">Guest requirements</div>
                       <div class="_ls0e43">
-                        <button type="button" class="_1ju7xj0j">Preview</button>
+                        <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1146,7 +1146,7 @@
                                 >
                                   <label
                                     for="guest_requirements_infant_can_attend-row-checkbox"
-                                    class="_13xlah4"
+                                    class="cursor-pointer"
                                     ><div class="d-flex">
                                       <div class="_gfomxi">
                                         <div
@@ -1191,7 +1191,7 @@
                                       >
                                         <label
                                           for="Tag:4804-row-checkbox"
-                                          class="_13xlah4"
+                                          class="cursor-pointer"
                                           ><div class="d-flex">
                                             <div class="_gfomxi">
                                               <div
@@ -1236,7 +1236,7 @@
                                       >
                                         <label
                                           for="Tag:4802-row-checkbox"
-                                          class="_13xlah4"
+                                          class="cursor-pointer"
                                           ><div class="d-flex">
                                             <div class="_gfomxi">
                                               <div
@@ -1283,7 +1283,7 @@
                                       >
                                         <label
                                           for="Tag:4805-row-checkbox"
-                                          class="_13xlah4"
+                                          class="cursor-pointer"
                                           ><div class="d-flex">
                                             <div class="_gfomxi">
                                               <div
@@ -1543,7 +1543,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
