--- a/submission/review.html
+++ b/submission/review.html
@@ -1036,7 +1036,7 @@
                       </div>
                       <div class="_g7lz6c">Review &amp; submit</div>
                       <div class="_ls0e43">
-                        <button type="button" class="_1ju7xj0j">Preview</button>
+                        <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1293,7 +1293,7 @@
                             >
                               <label
                                 for="info_is_compliant_with_all_laws-row-checkbox"
-                                class="_13xlah4"
+                                class="cursor-pointer"
                                 ><div class="d-flex">
                                   <div class="_gfomxi">
                                     <div
@@ -1340,7 +1340,7 @@
                             >
                               <label
                                 for="info_is_compliant_with_airbnb_policies-row-checkbox"
-                                class="_13xlah4"
+                                class="cursor-pointer"
                                 ><div class="d-flex">
                                   <div class="_gfomxi">
                                     <div
@@ -1426,7 +1426,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
