--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1037,7 +1037,7 @@
                       </div>
                       <div class="_g7lz6c">What we’ll do</div>
                       <div class="_ls0e43">
-                        <button type="button" class="_1ju7xj0j">Preview</button>
+                        <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1132,7 +1132,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                         <select
                                           name="experience_duration"
                                           aria-describedby="experience_duration-InputField-help"
-                                          class="_1iwku6d"
+                                          class="form__select"
                                           id="experience_duration"
                                         >
                                           <option value="0.5" id="0.5">
@@ -1295,7 +1295,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
-                                      class="_13xlah4"
+                                      class="cursor-pointer"
                                       ><div class="d-flex">
                                         <div class="_gfomxi">
                                           <div
@@ -1333,7 +1333,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   >
                                     <label
                                       for="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-radio-button"
-                                      class="_13xlah4"
+                                      class="cursor-pointer"
                                       ><div class="d-flex">
                                         <div class="_gfomxi">
                                           <div
@@ -1446,7 +1446,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
