--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -193,7 +193,7 @@
                               aria-label="Today, 9 July 2022, Saturday"
                               disabled=""
                               type="button"
-                              class="_1ju7xj0j"
+                              class="btn-outline-small"
                             >
                               Today
                             </button>
@@ -625,7 +625,7 @@
                               <div>
                                 <div>
                                   <div>
-                                    <button type="button" class="_1ju7xj0j">
+                                    <button type="button" class="btn-outline-small">
                                       <span class="_14d5b3i"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
@@ -4238,7 +4238,7 @@
                                 <div class="box-border">
                                   <select
                                     name="starts_at"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="starts_at"
                                     aria-readonly="false"
                                   >
@@ -4487,7 +4487,7 @@
                                 <div class="box-border">
                                   <select
                                     name="booking_type"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="booking_type"
                                     aria-readonly="false"
                                   >
@@ -4726,7 +4726,7 @@
                                 <div class="box-border">
                                   <select
                                     name="last_booking_lead_minutes"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="last_booking_lead_minutes"
                                     aria-readonly="false"
                                   >
@@ -4831,7 +4831,7 @@
                                 <div class="box-border">
                                   <select
                                     name="first_booking_lead_minutes"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="first_booking_lead_minutes"
                                     aria-readonly="false"
                                   >
@@ -4926,7 +4926,7 @@
                                 <div class="box-border">
                                   <select
                                     name="frequency"
-                                    class="_1iwku6d"
+                                    class="form__select"
                                     id="frequency"
                                     aria-readonly="false"
                                   >
