--- a/products.html
+++ b/products.html
@@ -9000,7 +9000,7 @@
                                                     <div class="_ekor09">
                                                       <button
                                                         type="button"
-                                                        class="_1ju7xj0j"
+                                                        class="btn-outline-small"
                                                       >
                                                         <div class="flex-items-center">
                                                           <svg
