--- a/profile.html
+++ b/profile.html
@@ -964,11 +964,11 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               Languages I speak
                                             </div>
                                             <div class="_1fopc40">
-                                              <div class="_4pyial">
+                                              <div class="form__badge">
                                                 <span class="_1ir6ymk" lang="en"
                                                   >English</span
                                                 >
-                                                <div class="_cdqlxt">
+                                                <div class="form__badge-btn">
                                                   <button
                                                     type="button"
                                                     class="btn-close"
@@ -1000,11 +1000,11 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="_4pyial">
+                                              <div class="form__badge">
                                                 <span class="_1ir6ymk" lang="tl"
                                                   >Tagalog</span
                                                 >
-                                                <div class="_cdqlxt">
+                                                <div class="form__badge-btn">
                                                   <button
                                                     type="button"
                                                     class="btn-close"
@@ -2103,11 +2103,11 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         Languages I speak
                                       </div>
                                       <div class="_1fopc40">
-                                        <div class="_4pyial">
+                                        <div class="form__badge">
                                           <span class="_1ir6ymk" lang="en"
                                             >English</span
                                           >
-                                          <div class="_cdqlxt">
+                                          <div class="form__badge-btn">
                                             <button
                                               type="button"
                                               class="btn-close"
@@ -2137,11 +2137,11 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </button>
                                           </div>
                                         </div>
-                                        <div class="_4pyial">
+                                        <div class="form__badge">
                                           <span class="_1ir6ymk" lang="tl"
                                             >Tagalog</span
                                           >
-                                          <div class="_cdqlxt">
+                                          <div class="form__badge-btn">
                                             <button
                                               type="button"
                                               class="btn-close"
