--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -916,7 +916,7 @@
                                                   rows="5"
                                                   data-testid="additional-requirements-text-area"
                                                   maxlength="850"
-                                                  class="_159914b"
+                                                  class="form__textarea"
                                                   autocomplete="off"
                                                   id="additional-requirements-text-area"
                                                   placeholder="E.g. Guests should have prior surfing experience, guests must have a scuba license, guests should be comfortable around dogs, etc."
