--- a/edit/what.html
+++ b/edit/what.html
@@ -424,7 +424,7 @@
                                                 aria-labelledby="description-label"
                                                 data-testid="description-textarea"
                                                 rows="9"
-                                                class="_159914b"
+                                                class="form__textarea"
                                                 autocomplete="off"
                                                 id="description-textarea"
                                                 placeholder="Tell guests the story of what they’ll do during your experience."
