--- a/profile.html
+++ b/profile.html
@@ -850,7 +850,7 @@
                                                     <textarea
                                                       name="about"
                                                       rows="4"
-                                                      class="_159914b"
+                                                      class="form__textarea"
                                                       autocomplete="off"
                                                       id="about"
                                                       spellcheck="false"
@@ -2001,7 +2001,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               <textarea
                                                 name="about"
                                                 rows="4"
-                                                class="_159914b"
+                                                class="form__textarea"
                                                 autocomplete="off"
                                                 id="about"
                                                 spellcheck="false"
