--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -327,7 +327,7 @@
                               <textarea
                                 rows="6"
                                 aria-describedby="note_to_responder-DLS-describedBy-label"
-                                class="_159914b"
+                                class="form__textarea"
                                 autocomplete="off"
                                 id="note_to_responder"
                               >
