--- a/reviews.html
+++ b/reviews.html
@@ -1295,7 +1295,7 @@
                                           aria-label="Write a public review for future guests"
                                           name="public_review_input"
                                           rows="2"
-                                          class="_159914b"
+                                          class="form__textarea"
                                           autocomplete="off"
                                           id="public_review_input"
                                           placeholder="Start writing here…"
@@ -1316,7 +1316,7 @@
                                           aria-label="Start writing here…"
                                           name="private_review_input"
                                           rows="2"
-                                          class="_159914b"
+                                          class="form__textarea"
                                           autocomplete="off"
                                           id="private_review_input"
                                           placeholder="Start writing here…"
