--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1083,7 +1083,7 @@
                                       minlength="200"
                                       aria-labelledby="description-label"
                                       rows="9"
-                                      class="_159914b"
+                                      class="form__textarea"
                                       autocomplete="off"
                                       id="description-textarea"
                                       placeholder="Tell guests the story of what they’ll do during your experience."
