--- a/edit/about.html
+++ b/edit/about.html
@@ -559,7 +559,7 @@
                                                   data-testid="about_host_input"
                                                   maxlength="850"
                                                   minlength="150"
-                                                  class="_159914b"
+                                                  class="form__textarea"
                                                   autocomplete="off"
                                                   id="about_host_input"
                                                   placeholder="Share the story behind your passion and knowledge."
