--- a/submission/about.html
+++ b/submission/about.html
@@ -1215,7 +1215,7 @@
                                       rows="5"
                                       maxlength="850"
                                       minlength="150"
-                                      class="_159914b"
+                                      class="form__textarea"
                                       autocomplete="off"
                                       id="about_host_input"
                                       placeholder="Share the story behind your passion and knowledge."
