--- a/places.html
+++ b/places.html
@@ -354,7 +354,7 @@
                               </div>
                               <div class="_10us9iz">
                                 <div class="_1b0cmst">
-                                  <button type="button" class="btn-light">
+                                  <button type="button" class="btn-light-small">
                                     <div class="_1f2ft8z">
                                       <span class="_149pqlo"
                                         ><svg
