--- a/account-settings.html
+++ b/account-settings.html
@@ -905,7 +905,7 @@
                                         type="hidden"
                                         name="authenticity_token"
                                         value="V4$.airbnb.com$gdP3em0LrCE$ovR3jip7DgQok-zydNr4HurdV6lt7gvlzQw_6ESPnWg="
-                                      /><button type="submit" class="_snbhip0">
+                                      /><button type="submit" class="btn-light">
                                         Log out
                                       </button>
                                     </form>
