--- a/explore-when.html
+++ b/explore-when.html
@@ -2895,7 +2895,7 @@
                                                                                 >
                                                                                   <button
                                                                                     type="button"
-                                                                                    class="_snbhip0"
+                                                                                    class="btn-light"
                                                                                   >
                                                                                     Load
                                                                                     more
