--- a/help.html
+++ b/help.html
@@ -1401,7 +1401,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="_snbhip0"
+                                                      class="btn-light"
                                                       >Contact us</a
                                                     >
                                                   </div>
@@ -3483,7 +3483,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="_snbhip0"
+                                                      class="btn-light"
                                                       >Contact us</a
                                                     >
                                                   </div>
@@ -4537,7 +4537,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="_snbhip0"
+                                                      class="btn-light"
                                                       >Contact us</a
                                                     >
                                                   </div>
@@ -5594,7 +5594,7 @@
                                                     <a
                                                       data-testid="explore-more-contact-us"
                                                       href="/help/contact-us"
-                                                      class="_snbhip0"
+                                                      class="btn-light"
                                                       >Contact us</a
                                                     >
                                                   </div>
