--- a/invite-friends.html
+++ b/invite-friends.html
@@ -169,7 +169,7 @@
                     <div class="_1cvivhm">
                       <button
                         type="button"
-                        class="_snbhip0"
+                        class="btn-light"
                         id="show-more-details-button"
                       >
                         Show more details
