--- a/products.html
+++ b/products.html
@@ -6574,7 +6574,7 @@
                                                         <a
                                                           rel="nofollow"
                                                           href="/contact_host/16354372/send_message?adults=1"
-                                                          class="_snbhip0"
+                                                          class="btn-light"
                                                           >Contact Host</a
                                                         >
                                                       </div>
