--- a/signup_login.html
+++ b/signup_login.html
@@ -1426,7 +1426,7 @@
                                             data-testid="social-auth-button-facebook"
                                             aria-label="Continue with Facebook"
                                             type="submit"
-                                            class="_snbhip0"
+                                            class="btn-light"
                                           >
                                             <div class="_1a2vq1h">
                                               <div class="flex-grow-0">
@@ -1493,7 +1493,7 @@
                                             data-testid="social-auth-button-google"
                                             aria-label="Continue with Google"
                                             type="submit"
-                                            class="_snbhip0"
+                                            class="btn-light"
                                           >
                                             <div class="_1a2vq1h">
                                               <div class="flex-grow-0">
@@ -1556,7 +1556,7 @@
                                             data-testid="social-auth-button-apple"
                                             aria-label="Continue with Apple"
                                             type="submit"
-                                            class="_snbhip0"
+                                            class="btn-light"
                                           >
                                             <div class="_1a2vq1h">
                                               <div class="flex-grow-0">
@@ -1591,7 +1591,7 @@
                                           data-testid="social-auth-button-email"
                                           aria-label="Continue with email"
                                           type="button"
-                                          class="_snbhip0 continue-btn-email"
+                                          class="btn-light continue-btn-email"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -1623,7 +1623,7 @@
                                           data-testid="social-auth-button-phone"
                                           aria-label="Continue with Phone"
                                           type="button"
-                                          class="_snbhip0 continue-btn-phone d-none"
+                                          class="btn-light continue-btn-phone d-none"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -4469,7 +4469,7 @@
                                           data-testid="social-auth-button-facebook"
                                           aria-label="Continue with Facebook"
                                           type="submit"
-                                          class="_snbhip0"
+                                          class="btn-light"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -4534,7 +4534,7 @@
                                           data-testid="social-auth-button-google"
                                           aria-label="Continue with Google"
                                           type="submit"
-                                          class="_snbhip0"
+                                          class="btn-light"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -4597,7 +4597,7 @@
                                           data-testid="social-auth-button-apple"
                                           aria-label="Continue with Apple"
                                           type="submit"
-                                          class="_snbhip0"
+                                          class="btn-light"
                                         >
                                           <div class="_1a2vq1h">
                                             <div class="flex-grow-0">
@@ -4632,7 +4632,7 @@
                                         data-testid="social-auth-button-email"
                                         aria-label="Continue with email"
                                         type="button"
-                                        class="_snbhip0 continue-btn-email"
+                                        class="btn-light continue-btn-email"
                                       >
                                         <div class="_1a2vq1h">
                                           <div class="flex-grow-0">
@@ -4664,7 +4664,7 @@
                                         data-testid="social-auth-button-phone"
                                         aria-label="Continue with Phone"
                                         type="button"
-                                        class="_snbhip0 continue-btn-phone d-none"
+                                        class="btn-light continue-btn-phone d-none"
                                       >
                                         <div class="_1a2vq1h">
                                           <div class="flex-grow-0">
