extract explore-filter

--- a/explore-when.html
+++ b/explore-when.html
@@ -399,7 +399,7 @@
                                                                                             tabindex="-1"
                                                                                           >
                                                                                             <div
-                                                                                              class="_1ct0t2 notranslate"
+                                                                                              class="explore-filter__date-off-text notranslate"
                                                                                               data-testid="calendar-day-08/01/2022"
                                                                                               data-is-day-blocked="true"
                                                                                               style="
@@ -494,7 +494,7 @@
                                                                                             tabindex="-1"
                                                                                           >
                                                                                             <div
-                                                                                              class="_1ct0t2 notranslate"
+                                                                                              class="explore-filter__date-off-text notranslate"
                                                                                               data-testid="calendar-day-08/06/2022"
                                                                                               data-is-day-blocked="true"
                                                                                               style="
@@ -515,7 +515,7 @@
                                                                                             tabindex="-1"
                                                                                           >
                                                                                             <div
-                                                                                              class="_1ct0t2 notranslate"
+                                                                                              class="explore-filter__date-off-text notranslate"
                                                                                               data-testid="calendar-day-08/07/2022"
                                                                                               data-is-day-blocked="true"
                                                                                               style="
@@ -629,7 +629,7 @@
                                                                                             tabindex="-1"
                                                                                           >
                                                                                             <div
-                                                                                              class="_1ct0t2 notranslate"
+                                                                                              class="explore-filter__date-off-text notranslate"
                                                                                               data-testid="calendar-day-08/13/2022"
                                                                                               data-is-day-blocked="true"
                                                                                               style="
@@ -650,7 +650,7 @@
                                                                                             tabindex="-1"
                                                                                           >
                                                                                             <div
-                                                                                              class="_1ct0t2 notranslate"
+                                                                                              class="explore-filter__date-off-text notranslate"
                                                                                               data-testid="calendar-day-08/14/2022"
                                                                                               data-is-day-blocked="true"
                                                                                               style="
