--- a/profile.html
+++ b/profile.html
@@ -940,7 +940,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                           aria-haspopup="listbox"
                                                           role="combobox"
                                                           data-reach-combobox-input=""
-                                                          class="form__input--small"
+                                                          class="_1otaoi4o"
                                                           id="location"
                                                           autocomplete="off"
                                                           type="text"
@@ -1054,7 +1054,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                   <div class="_1sgu3hhe">
                                                     <input
                                                       name="work"
-                                                      class="form__input--small"
+                                                      class="_1otaoi4o"
                                                       id="work"
                                                       autocomplete="off"
                                                       type="text"
@@ -2079,7 +2079,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                     aria-haspopup="listbox"
                                                     role="combobox"
                                                     data-reach-combobox-input=""
-                                                    class="form__input--small"
+                                                    class="_1otaoi4o"
                                                     id="location"
                                                     autocomplete="off"
                                                     type="text"
@@ -2186,7 +2186,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <div class="_1sgu3hhe">
                                               <input
                                                 name="work"
-                                                class="form__input--small"
+                                                class="_1otaoi4o"
                                                 id="work"
                                                 autocomplete="off"
                                                 type="text"
